# bsv-poker-zh

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/client-desktop/: README.md  package.json
apps/client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-desktop/src-tauri/src/: main.rs
apps/client-web/: vite.config.ts
apps/indexer-go/: README.md  main.go
apps/relay-go/: README.md  main.go
docs/: assurance.md  redteam-02.md  runbook.md  user-guide.md
docs/adr/: 0001-node-native-typescript.md  0002-portable-sha256.md  0003-self-contained-interpreter.md  0004-mode-a-signing.md  0005-engine-auto-advance.md  README.md
scripts/: rename.sh
spec/: 19C-byte-schedule.md  BUILD-KICKOFF.md  BUILD-STATUS.md  HANDOVER.md  bsv-poker-app-architecture.md  bsv-poker-spec-HANDOVER.md  bsv-poker-spec-redteam-01.md  bsv-poker-spec.md  handeval_oracle.py  traceability.txt
tests/: boundaries.test.ts  docs-present.test.ts  release-artifacts.test.ts  web-interaction-rules.test.ts
tools/: _sighash_ref.py  ci.ts  conformance-real-e2e.ts  extract-requirements.ts  lint-opreturn.ts  lobby-e2e.ts  microbet-e2e.ts  mode-b-e2e.ts  multi-e2e.ts  multiplayer-e2e.ts  node-e2e.ts  ob-bind-e2e.ts  onchain-e2e.ts  onchain-poker-e2e.ts  onchain-recovery-e2e.ts  onchain-spend-e2e.ts  package.json  perf-suite.ts  reconnect-e2e.ts  reproduce.ts  selftest.ts  session-e2e.ts  sighash-interop.ts  tee-bind-e2e.ts  trace-map.ts  traceability.ts  va-bind-e2e.ts  wallet-e2e.ts
vm/: README.md
(+15 files in other folders)
