# Tauri v2 desktop supervisor (core §11.1, app §A3). Build requires the native toolchain
# (Rust + a C linker: MSVC Build Tools on Windows) + the Tauri CLI — see ../README.md.
[package]
name = "bsv-poker-desktop"
version = "0.1.0"
edition = "2021"
description = "bsv-poker desktop shell — Tauri supervisor for node+relay+indexer"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "bsv-poker-desktop"
path = "src/main.rs"
